# yolov8-opencv-onnxruntime-cpp

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  default.nix  main.cpp  result  rtdetr_onnx.cpp  rtdetr_onnx.h  yolov8.cpp  yolov8.h  yolov8_obb.cpp  yolov8_obb.h  yolov8_obb_onnx.cpp  yolov8_obb_onnx.h  yolov8_onnx.cpp  yolov8_onnx.h  yolov8_pose.cpp  yolov8_pose.h  yolov8_pose_onnx.cpp  yolov8_pose_onnx.h  yolov8_seg.cpp  yolov8_seg.h  yolov8_seg_onnx.cpp  yolov8_seg_onnx.h  yolov8_utils.cpp  yolov8_utils.h
.github/workflows/: nixbuild.yml
